--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,17 @@
-<h1>Ben's ITIS 3135 Home Page</h1>
+<!DOCTYPE html>
+<htlmlang = "en-US"> 
+<head>
+    <title>Ben's Homepage</title>
+</head>
+<body>
+    <header>
+        <h1>Ben's ITIS 3135 Home Page</h1>
+    </header>
+    <main>
+        <h2>Welcome</h2>
+        <p>Click to go to my ITIS 2125 course.</p>
+    </main>
+    <footer>
+    </footer>
+    </body>
+</htlm>
