--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <htlmlang = "en-US"> 
 <head>
+    <meta charset = "uft-8">
     <title>Ben's Homepage</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
         <p>Click to go to my ITIS 2125 course.</p>
     </main>
     <footer>
+        Created by Blue Mammoth &copy;2022.
     </footer>
     </body>
 </htlm>
