--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -10,7 +10,7 @@
     </header>
     <main>
         <h2>Welcome</h2>
-        <p>Click to go to my ITIS 2125 course.</p>
+        <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
     </main>
     <footer>
         Created by Blue Mammoth &copy;2022.
