Updated home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Ben's Home Page</h1>
+<!DOCTYPE html>
+<htlmlang = "en-US"> 
+<head>
+    <meta charset = "uft-8">
+    <title>Ben's Homepage</title>
+</head>
+<body>
+    <header>
+        <h1>Ben's ITIS 3135 Home Page</h1>
+    </header>
+    <main>
+        <h2>Welcome</h2>
+        <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
+    </main>
+    <footer>
+        Created by Blue Mammoth &copy;2022.
+    </footer>
+    </body>
+</htlm>
