ITIS page updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Ben's ITIS 3135 Home Page</h1>
+        <h1>Ben's Home Page</h1>
     </header>
     <main>
         <h2>Welcome</h2>
