--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,7 +2,7 @@
 <htlmlang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben's Homepage</title>
+    <title>Ben Molk | ITIS 3135 |  Blue Mammoth Home</title>
 </head>
 <body>
     <header>
