--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -2,7 +2,7 @@
 <htlmlang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Blue Mammoth Home</title>
+    <title>Ben Molk | ITIS 3135 |  Blue Mammoth Contract</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
@@ -10,8 +10,8 @@
         <h1>Ben Molk | ITIS 3135 |  Blue Mammoth</h1>
     </header>
     <main>
-        <h2>Homepage</h2>
-        <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
+        <h2>Course Contract</h2>
+        <p>Click to go to my <a href = "index.html"> introduction.</a>.</p>
     </main>
     <footer>
         Created by Blue Mammoth &copy;2022.
