--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -2,7 +2,7 @@
 <htlmlang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Blue Mammoth Home</title>
+    <title>Ben Molk | ITIS 3135 |  Blue Mammoth Introduction</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
@@ -11,7 +11,7 @@
     </header>
     <main>
         <h2>Homepage</h2>
-        <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
+        <p>Click to go to my <a href = "contract.html">course contract</a>.</p>
     </main>
     <footer>
         Created by Blue Mammoth &copy;2022.
