--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -2,19 +2,19 @@
 <htlmlang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Blue Mammoth Introduction</title>
+    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Introduction</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
     <header>
-        <h1>Ben Molk | ITIS 3135 |  Blue Mammoth</h1>
+        <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
     <main>
         <h2>Homepage</h2>
         <p>Click to go to my <a href = "contract.html">course contract</a>.</p>
     </main>
     <footer>
-        Created by Blue Mammoth &copy;2022.
+        Created by Bronze Mammoth &copy;2022.
     </footer>
     </body>
 </htlm>
