Changing name on homepage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <htlmlang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben's Homepage</title>
+    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Home</title>
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
         <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
     </main>
     <footer>
-        Created by Blue Mammoth &copy;2022.
+        Created by Bronze Mammoth &copy;2022.
     </footer>
     </body>
 </htlm>
