Linked to style sheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset = "uft-8">
     <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Home</title>
+    <link href = "styles/default.css" rel = "stylesheet">
 </head>
 <body>
     <header>
