--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -10,7 +10,7 @@
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
     <main>
-        <h2>Homepage</h2>
+        <h2> ITIS Homepage</h2>
         <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
     </main>
     <footer>
