--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <header>
         <h1>Ben's Home Page</h1>
+            <nav>
+                <a href = "./">Home |</a>
+                <a href = "introduction.html">Introduction |</a>
+                <a href = "contract.html">Contract |</a>
+                <a href = "/">Personal</a>
+
+            </nav>
     </header>
     <main>
         <h2>Welcome</h2>
