--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -10,7 +10,7 @@
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
     <main>
-        <h2>Homepage</h2>
+        <h2>Introduction</h2>
         <p>Click to go to my <a href = "contract.html">course contract</a>.</p>
     </main>
     <footer>
