--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -9,6 +9,12 @@
     <header>
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
+        <nav>
+            <a href = "./">Home |</a>
+            <a href = "introduction.html">Introduction |</a>
+            <a href = "contract.html">Contract |</a>
+            <a href = "/">Personal</a>
+        </nav>
     <main>
         <h2> ITIS Homepage</h2>
         <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
