--- a/index.html
+++ b/index.html
@@ -2,21 +2,14 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Home</title>
-    <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
+    <title>Ben Molk</title>
 </head>
 <body>
     <header>
-        <h1>Ben's Home Page</h1>
-            <nav>
-                <a href = "./">Home |</a>
-                <a href = "introduction.html">Introduction |</a>
-                <a href = "contract.html">Contract |</a>
-                <a href = "/">Personal</a>
-            </nav>
+        <h1>Welcome</h1>
     </header>
     <main>
-        <h2>Welcome</h2>
+        <h2>Homepage</h2>
         <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
     </main>
     <footer>
