Added nav bar to contract and intro

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -9,6 +9,12 @@
     <header>
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
+    <nav>
+        <a href = "./">Home |</a>
+        <a href = "introduction.html">Introduction |</a>
+        <a href = "contract.html">Contract |</a>
+        <a href = "/">Personal</a>
+    </nav>
     <main>
         <h2>Course Contract</h2>
         <p>Click to go to my <a href = "index.html"> introduction.</a>.</p>
