--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -17,7 +17,14 @@
     </nav>
     <main>
         <h2>Introduction</h2>
-        <p>Click to go to my <a href = "contract.html">course contract</a>.</p>
+        <ul>
+        <p><b>Personal Background: </b> Hi my name is Benjamin Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</p>
+        <p><b>Academic Background: </b>
+        <p><b>Background in this Subject: </b>
+        <p><b>Courses: </b>
+            
+        </ul>
+            
     </main>
     <footer>
         Created by Bronze Mammoth &copy;2022.
