--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -19,10 +19,12 @@
         <h2>Introduction</h2>
         <ul>
         <p><b>Personal Background: </b> Hi my name is Benjamin Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</p>
-        <p><b>Academic Background: </b>
-        <p><b>Background in this Subject: </b>
+        <p><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer Science. I started out majoring in Computer Engineering but after 2 years in the major determined that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here but for now, I am content with where I am.</p>
+        <p><b>Background in this Subject: </b> I developed an interest in code while taking a C++ class in my freshman year. When I decided I wanted to change my major, Computer Science seemed like a good option to further explore and learn programming.</p>
         <p><b>Courses: </b>
-            
+            <p>ITIS-3135 Web App Design and Development: Working towards a degree in Computer Science with a concentration in Software Engineering</p>
+            <p>ITSC-3155 Software Engineering: Working towards a degree in Computer Science with a concentration in Software Engineering</p>
+            <p>ITSC-3181 Intro to Computer Architecture: Working towards a degree in Computer Science with a concentration in Software Engineering</p>
         </ul>
             
     </main>
