--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -17,14 +17,16 @@
     </nav>
     <main>
         <h2>Introduction</h2>
-        <ul style = "list-style-type:circle">
+        <ul style = "list-style-type:disc">
         <li><b>Personal Background: </b> Hi my name is Benjamin Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
         <li><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer Science. I started out majoring in Computer Engineering but after 2 years in the major determined that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here but for now, I am content with where I am.</li>
         <li><b>Background in this Subject: </b> I developed an interest in code while taking a C++ class in my freshman year. When I decided I wanted to change my major, Computer Science seemed like a good option to further explore and learn programming.</li>
         <li><b>Courses: </b></li>
-            <p>ITIS-3135 Web App Design and Development: Working towards a degree in Computer Science with a concentration in Software Engineering</p>
-            <p>ITSC-3155 Software Engineering: Working towards a degree in Computer Science with a concentration in Software Engineering</p>
-            <p>ITSC-3181 Introduction to Computer Architecture: Working towards a degree in Computer Science with a concentration in Software Engineering</p>
+            <ul style = "list-style-type:circle">
+            <li>ITIS-3135 Web App Design and Development: Working towards a degree in Computer Science with a concentration in Software Engineering</li>
+            <li>ITSC-3155 Software Engineering: Working towards a degree in Computer Science with a concentration in Software Engineering</li>
+            <li>ITSC-3181 Introduction to Computer Architecture: Working towards a degree in Computer Science with a concentration in Software Engineering</li>
+            </ul>
         </ul> 
     </main>
     <footer>
