--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -17,7 +17,7 @@
         </nav>
     <main>
         <h2> ITIS Homepage</h2>
-        <p>Click to go to my <a href = "itis3135/">ITIS 3135 course</a>.</p>
+        <p>Welcome</a>.</p>
     </main>
     <footer>
         Created by Bronze Mammoth &copy;2022.
