--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,9 +23,9 @@
         <li><b>Background in this Subject: </b> I developed an interest in code while taking a C++ class in my freshman year. When I decided I wanted to change my major, Computer Science seemed like a good option to further explore and learn programming.</li>
         <li><b>Courses: </b></li>
             <ul style = "list-style-type:circle">
-            <li>ITIS-3135 Web App Design and Development: Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            <li>ITSC-3155 Software Engineering: Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            <li>ITSC-3181 Introduction to Computer Architecture: Working towards a degree in Computer Science with a concentration in Software Engineering</li>
+            <li><b>ITIS-3135 Web App Design and Development: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
+            <li><b>ITSC-3155 Software Engineering: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
+            <li><b>ITSC-3181 Introduction to Computer Architecture: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
             </ul>
         </ul> 
     </main>
