added links in footer

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -28,6 +28,16 @@
         <p>Signed: <em>Benjamin M. Molk</em> , 01/25/2022</p>
     </main>
     <footer>
+        <nav>
+            <a href = "https://webpages.charlotte.edu/bmolk/">Charlotte.edu |</a>
+            <a href = "https://github.com/Bmolk">Github|</a>
+            <a href = "https://bmolk.github.io/">Github.io|</a>
+            <a href = "https://bmolk.github.io/itis3135/">ITIS 3135 Github Pages|</a>
+            <a href = "https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
+            <a href = "https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
+            <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
+            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn |</a>
+        </nav>
         Created by Bronze Mammoth &copy;2022.
     </footer>
     </body>
