added footer buttons

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -39,6 +39,8 @@
             <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
         </nav>
         Created by Bronze Mammoth &copy;2022.
+        <img scr = "button_validation_css.png">
+        <img scr = "button_validation_html5.png">
     </footer>
     </body>
 </htlm>
