--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
         <h2>Ben Molk Introduction</h2>
-        <img src="images/me.jpg" alt= "This is me from a few years ago because I never take pictures">
+        <img src ="images/me.jpg" alt= "This is me from a few years ago because I never take pictures">
         <ul style = "list-style-type:disc">
         <li><b>Personal Background: </b> Hi my name is Ben Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
         <li><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer Science. I started out majoring in Computer Engineering but after 2 years in the major determined that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here but for now, I am content with where I am.</li>
@@ -42,6 +42,8 @@
             <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn |</a>
         </nav>
         Created by Bronze Mammoth &copy;2022.
+        <img scr = "button_validation_css.png">
+        <img scr = "button_validation_html5.png">
     </footer>
     </body>
 </htlm>
