Updated navigation mistake

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -13,7 +13,7 @@
             <a href = "./">Home |</a>
             <a href = "introduction.html">Introduction |</a>
             <a href = "contract.html">Contract |</a>
-            <a href = "table.html">Contract |</a>
+            <a href = "table.html">Tables |</a>
             <a href = "/">Personal</a>
         </nav>
     <main>
