--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -13,11 +13,14 @@
         <a href = "./">Home |</a>
         <a href = "introduction.html">Introduction |</a>
         <a href = "contract.html">Contract |</a>
-        <a href = "table.html">Contract |</a>
+        <a href = "table.html">Tables |</a>
         <a href = "/">Personal</a>
     </nav>
     <main>
         <h2>HTML Tables</h2>
+        <h3>
+
+        </h3>
 
     </main>
     <footer>
