--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -19,7 +19,16 @@
     <main>
         <h2>HTML Tables</h2>
         <h3>
-
+            My Tabular Data
+            <ol>
+                <li>Josh Freeman</li>
+                <li>Evan Pico</li>
+                <li>Luke Trimm</li>
+                <li>Hannah Jennkins</li>
+                <li>Ethan Marcus</li>
+                <li>Zach Maxwell</li>
+                <li>Emma Wellings</li>
+            </ol>
         </h3>
 
     </main>
