--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -30,6 +30,16 @@
                 <li>Emma Wellings</li>
             </ol>
         </h3>
+        <h3>
+            Employee Data in a Simple Table
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Years of Service</th>
+                </tr>
+            </table>
+        </h3>
 
     </main>
     <footer>
