--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -38,6 +38,11 @@
                     <th>Email</th>
                     <th>Years of Service</th>
                 </tr>
+                <tr>
+                    <th>Josh Freeman</th>
+                    <th>email</th>
+                    <th>6</th>
+                </tr>
             </table>
         </h3>
 
