--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <th>Josh Freeman</th>
-                    <th>email</th>
+                    <th>JFreeman@gmail.com</th>
                     <th>6</th>
                 </tr>
             </table>
