--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -43,6 +43,36 @@
                     <th>JFreeman@gmail.com</th>
                     <th>6</th>
                 </tr>
+                <tr>
+                    <th>Evan Pico</th>
+                    <th>EPico@gmail.com</th>
+                    <th>8</th>
+                </tr>
+                <tr>
+                    <th>Luke Trimm</th>
+                    <th>LTrimm@gmail.com</th>
+                    <th>3</th>
+                </tr>
+                <tr>
+                    <th>Hannah Jennkins</th>
+                    <th>HJennkins@gmial.com</th>
+                    <th>10</th>
+                </tr>
+                <tr>
+                    <th>Ethan Marcus</th>
+                    <th>EMarcus@gmail.com</th>
+                    <th>8</th>
+                </tr>
+                <tr>
+                    <th>Zach Maxwell</th>
+                    <th>ZMaxwell</th>
+                    <th>12</th>
+                </tr>
+                <tr>
+                    <th>Emma Wellings</th>
+                    <th>EWellings@gmail.com</th>
+                    <th>4</th>
+                </tr>
             </table>
         </h3>
 
