--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -65,7 +65,7 @@
                 </tr>
                 <tr>
                     <th>Zach Maxwell</th>
-                    <th>ZMaxwell</th>
+                    <th>ZMaxwell@gmail.com</th>
                     <th>12</th>
                 </tr>
                 <tr>
