--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -76,6 +76,57 @@
             </table>
         </h3>
 
+        <h3>
+            Employee Data in a Simple Table
+            <table>
+                <tr>
+                    <th>Category</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Years of Service</th>
+                </tr>
+                <tr>
+                    <th>Josh Freeman</th>
+                    <th>JFreeman@gmail.com</th>
+                    <th>6</th>
+                </tr>
+                <tr>
+                    <th>Evan Pico</th>
+                    <th>EPico@gmail.com</th>
+                    <th>8</th>
+                </tr>
+                <tr>
+                    <th>Luke Trimm</th>
+                    <th>LTrimm@gmail.com</th>
+                    <th>3</th>
+                </tr>
+                <tr>
+                    <th>Hannah Jennkins</th>
+                    <th>HJennkins@gmial.com</th>
+                    <th>10</th>
+                </tr>
+                <tr>
+                    <th>Ethan Marcus</th>
+                    <th>EMarcus@gmail.com</th>
+                    <th>8</th>
+                </tr>
+                <tr>
+                    <th>Zach Maxwell</th>
+                    <th>ZMaxwell@gmail.com</th>
+                    <th>12</th>
+                </tr>
+                <tr>
+                    <th>Emma Wellings</th>
+                    <th>EWellings@gmail.com</th>
+                    <th>4</th>
+                </tr>
+                <tr>
+                    <th>colspan="2">Total Annual Salary Budget:</th>
+                    <td>$100,000</td>
+                </tr>
+            </table>
+        </h3>
+
     </main>
     <footer>
         <nav>
