--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -121,8 +121,8 @@
                     <th>4</th>
                 </tr>
                 <tr>
-                    <th>colspan="2">Total Annual Salary Budget:</th>
-                    <td>$100,000</td>
+                    <th colspan = "2">Total Annual Salary Budget:</th>
+                    <td colspan="2">$100,000</td>
                 </tr>
             </table>
         </h3>
