--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -86,6 +86,7 @@
                     <th>Years of Service</th>
                 </tr>
                 <tr>
+                    <th rowspan="3">Noob</th>
                     <th>Josh Freeman</th>
                     <th>JFreeman@gmail.com</th>
                     <th>6</th>
