--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -102,11 +102,13 @@
                     <th>3</th>
                 </tr>
                 <tr>
+                    <th>Intermediate</th>
                     <th>Hannah Jennkins</th>
                     <th>HJennkins@gmial.com</th>
                     <th>10</th>
                 </tr>
                 <tr>
+                    <th rowspan="3">Pro</th>
                     <th>Ethan Marcus</th>
                     <th>EMarcus@gmail.com</th>
                     <th>8</th>
