--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -83,7 +83,7 @@
                     <th>Category</th>
                     <th>Name</th>
                     <th>Email</th>
-                    <th>Years of Service</th>
+                    <th>Salary</th>
                 </tr>
                 <tr>
                     <th rowspan="3">Noob</th>
