--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -41,27 +41,27 @@
                 <tr>
                     <th>Josh Freeman</th>
                     <th>JFreeman@gmail.com</th>
-                    <th>6</th>
+                    <th>2</th>
                 </tr>
                 <tr>
                     <th>Evan Pico</th>
                     <th>EPico@gmail.com</th>
-                    <th>8</th>
+                    <th>3</th>
                 </tr>
                 <tr>
                     <th>Luke Trimm</th>
                     <th>LTrimm@gmail.com</th>
-                    <th>3</th>
+                    <th>6</th>
                 </tr>
                 <tr>
                     <th>Hannah Jennkins</th>
                     <th>HJennkins@gmial.com</th>
-                    <th>10</th>
+                    <th>8</th>
                 </tr>
                 <tr>
                     <th>Ethan Marcus</th>
                     <th>EMarcus@gmail.com</th>
-                    <th>8</th>
+                    <th>10</th>
                 </tr>
                 <tr>
                     <th>Zach Maxwell</th>
@@ -71,7 +71,7 @@
                 <tr>
                     <th>Emma Wellings</th>
                     <th>EWellings@gmail.com</th>
-                    <th>4</th>
+                    <th>12</th>
                 </tr>
             </table>
         </h3>
@@ -86,7 +86,7 @@
                     <th>Salary</th>
                 </tr>
                 <tr>
-                    <th rowspan="3">Noob</th>
+                    <th rowspan="3">Beginner</th>
                     <th>Josh Freeman</th>
                     <th>JFreeman@gmail.com</th>
                     <th>6</th>
