--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -77,7 +77,7 @@
         </h3>
 
         <h3>
-            Employee Data in a Simple Table
+            Employee Data in a Complex Table
             <table>
                 <tr>
                     <th>Category</th>
@@ -89,39 +89,39 @@
                     <th rowspan="3">Beginner</th>
                     <th>Josh Freeman</th>
                     <th>JFreeman@gmail.com</th>
-                    <th>6</th>
+                    <th>$40,000</th>
                 </tr>
                 <tr>
                     <th>Evan Pico</th>
                     <th>EPico@gmail.com</th>
-                    <th>8</th>
+                    <th>$40,000</th>
                 </tr>
                 <tr>
                     <th>Luke Trimm</th>
                     <th>LTrimm@gmail.com</th>
-                    <th>3</th>
+                    <th>$40,000</th>
                 </tr>
                 <tr>
                     <th>Intermediate</th>
                     <th>Hannah Jennkins</th>
                     <th>HJennkins@gmial.com</th>
-                    <th>10</th>
+                    <th>$50,000</th>
                 </tr>
                 <tr>
                     <th rowspan="3">Pro</th>
                     <th>Ethan Marcus</th>
                     <th>EMarcus@gmail.com</th>
-                    <th>8</th>
+                    <th>$70,000</th>
                 </tr>
                 <tr>
                     <th>Zach Maxwell</th>
                     <th>ZMaxwell@gmail.com</th>
-                    <th>12</th>
+                    <th>$70,000</th>
                 </tr>
                 <tr>
                     <th>Emma Wellings</th>
                     <th>EWellings@gmail.com</th>
-                    <th>4</th>
+                    <th>$70,000</th>
                 </tr>
                 <tr>
                     <th colspan = "2">Total Annual Salary Budget:</th>
