--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -108,7 +108,7 @@
                     <th>$50,000</th>
                 </tr>
                 <tr>
-                    <th rowspan="3">Pro</th>
+                    <th rowspan="3">Professional</th>
                     <th>Ethan Marcus</th>
                     <th>EMarcus@gmail.com</th>
                     <th>$70,000</th>
