--- a/itis3135/table.html
+++ b/itis3135/table.html
@@ -80,10 +80,10 @@
             Employee Data in a Complex Table
             <table>
                 <tr>
-                    <th>Category</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Salary</th>
+                    <th><b>Category</b></th>
+                    <th><b>Name</b></th>
+                    <th><b>Email</b></th>
+                    <th><b>Salary</b></th>
                 </tr>
                 <tr>
                     <th rowspan="3">Beginner</th>
