--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -2,24 +2,24 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Home</title>
+    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Form</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
     <header>
         <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
     </header>
-        <nav>
-            <a href = "./">Home |</a>
-            <a href = "introduction.html">Introduction |</a>
-            <a href = "contract.html">Contract |</a>
-            <a href = "table.html">Tables |</a>
-            <a href = "form.html">Form |</a>
-            <a href = "/">Personal</a>
-        </nav>
+    <nav>
+        <a href = "./">Home |</a>
+        <a href = "introduction.html">Introduction |</a>
+        <a href = "contract.html">Contract |</a>
+        <a href = "table.html">Tables |</a>
+        <a href = "form.html">Form |</a>
+        <a href = "/">Personal</a>
+    </nav>
     <main>
-        <h2> ITIS Homepage</h2>
-        <p>Welcome</a>.</p>
+        <h2>Form</h2>
+        
     </main>
     <footer>
         <nav>
