--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -14,6 +14,7 @@
         <a href = "introduction.html">Introduction |</a>
         <a href = "contract.html">Contract |</a>
         <a href = "table.html">Tables |</a>
+        <a href = "form.html">Form |</a>
         <a href = "/">Personal</a>
     </nav>
     <main>
