--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -20,6 +20,12 @@
     <main>
         <h2>Form</h2>
         
+        <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname">
+        </form>
     </main>
     <footer>
         <nav>
