--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -21,10 +21,12 @@
         <h2>Form</h2>
         
         <form>
-            <label for="fname">First name:</label><br>
+            <label for="fname">Name:</label><br>
             <input type="text" id="fname" name="fname"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname">
+            <label for="email">Email:</label><br>
+            <input type="text" id="email" name="email">
+            <label for="phone">Phone Numer:</label><br>
+            <input type="text" id="phone" name="phone">
         </form>
     </main>
     <footer>
