--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -20,13 +20,14 @@
     <main>
         <h2>Form</h2>
         
-        <form>
-            <label for="fname">Name:</label><br>
-            <input type="text" id="fname" name="fname"><br>
+        <form action="/action_page.php">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name"><br>
             <label for="email">Email:</label><br>
             <input type="text" id="email" name="email">
             <label for="phone">Phone Numer:</label><br>
             <input type="text" id="phone" name="phone">
+            <input type="submit" value="Submit">
         </form>
     </main>
     <footer>
