--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -29,7 +29,14 @@
 
             <label for="phone">Phone Numer:</label><br>
             <input type="text" id="phone" name="phone">
-            
+
+            <input type="checkbox" id="pc" name="pc" value="PC">
+            <label for="pc"> I have a PC</label><br>
+            <input type="checkbox" id="cell" name="cell" value="Cell Phone">
+            <label for="cell"> I have a Cell Phone</label><br>
+            <input type="checkbox" id="laptop" name="laptop" value="Laptop">
+            <label for="laptop"> I have a Laptop</label>
+
             <input type="submit" value="Submit">
         </form>
     </main>
