--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -25,10 +25,10 @@
             <input type="text" id="name" name="name"><br>
 
             <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email">
+            <input type="text" id="email" name="email"><br>
 
             <label for="phone">Phone Numer:</label><br>
-            <input type="text" id="phone" name="phone">
+            <input type="text" id="phone" name="phone"><br>
         
             <input type="radio" id="game" name="entertainment" value="Video Game">
             <label for="game">Video Game</label><br>
