--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -44,7 +44,7 @@
             </form>
         
             <input type ="submit" value = "Submit">
-            <input type = :"reset" value = "Reset">
+            <input type = "reset" value = "Reset">
         </form>
     </main>
     <footer>
