--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -30,11 +30,13 @@
             <label for="phone">Phone Numer:</label><br>
             <input type="text" id="phone" name="phone"><br>
         
+            <p>Would you rather paly a video game or watch a movie?</p>
             <input type="radio" id="game" name="entertainment" value="Video Game">
             <label for="game">Video Game</label><br>
             <input type="radio" id="movie" name="entertainment" value="Movie">
             <label for="movie">Movie</label><br>
         
+            <p>Which of these do you own?</p>
             <input type="checkbox" id="pc" name="pc" value="PC">
             <label for="pc"> I have a PC</label><br>
             <input type="checkbox" id="cell" name="cell" value="Cell Phone">
