--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -46,7 +46,10 @@
             </form>
         
             <input type = "submit" value = "Submit">
-            <input type = "reset" value="Reset">
+        </form>
+
+        <form action = "/action_page.php">
+            <input type="reset" value="Reset">
         </form>
     </main>
     <footer>
