--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -42,7 +42,7 @@
             <input type="checkbox" id="cell" name="cell" value="Cell Phone">
             <label for="cell"> I have a Cell Phone</label><br>
             <input type="checkbox" id="laptop" name="laptop" value="Laptop">
-            <label for="laptop"> I have a Laptop</label>
+            <label for="laptop"> I have a Laptop</label><br>
             </form>
         
             <input type = "submit" value = "Submit">
