--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -30,7 +30,7 @@
             <label for="phone">Phone Numer:</label><br>
             <input type="text" id="phone" name="phone"><br>
         
-            <p>Would you rather paly a video game or watch a movie?</p>
+            <p>Would you rather play a video game or watch a movie?</p>
             <input type="radio" id="game" name="entertainment" value="Video Game">
             <label for="game">Video Game</label><br>
             <input type="radio" id="movie" name="entertainment" value="Movie">
