--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -43,8 +43,16 @@
             <label for="cell"> I have a Cell Phone</label><br>
             <input type="checkbox" id="laptop" name="laptop" value="Laptop">
             <label for="laptop"> I have a Laptop</label><br>
-            </form>
         
+            <label for = "color">Choose your favorite from these colors:</label>
+                <select name = "color" id = "color">
+                    <option value="blue">Blue</option>
+                    <option value="red">Red</option>
+                    <option value="green">Green</option>
+                    <option value="Purple">Purple/option>
+                </select>
+                <br><br>
+
             <input type = "submit" value = "Submit">
             <input type = "reset" value = "Reset">
         </form>
