--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -52,7 +52,7 @@
                     <option value="blue">Blue</option>
                     <option value="red">Red</option>
                     <option value="green">Green</option>
-                    <option value="Purple">Purple/option>
+                    <option value="Purple">Purple</option>
                 </select>
                 <br><br>
 
