--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -22,10 +22,10 @@
 
         <form action = #>
             <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name"><br>
+            <input type="text" id="name" name="name" required><br>
 
             <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email"><br>
+            <input type="text" id="email" name="email" required><br>
 
             <label for="phone">Phone Numer:</label><br>
             <input type="text" id="phone" name="phone"><br>
