--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -22,13 +22,13 @@
 
         <form action = #>
             <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br>
+            <input type="text" id="name" name="name" required placeholder="John Doe"><br>
 
             <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email" required><br>
+            <input type="text" id="email" name="email" required placeholder="johndoes@gmail.com"><br>
 
             <label for="phone">Phone Numer:</label><br>
-            <input type="text" id="phone" name="phone"><br>
+            <input type="text" id="phone" name="phone" placeholder="123-123-1234"><br>
             <br><br>
         
             <label for = "entertain">Would you rather play a video game or watch a movie?:</label><br>
