--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -25,7 +25,7 @@
             <input type="text" id="name" name="name" required placeholder="John Doe"><br>
 
             <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email" required placeholder="johndoes@gmail.com"><br>
+            <input type="text" id="email" name="email" required placeholder="johndoe@gmail.com"><br>
 
             <label for="phone">Phone Numer:</label><br>
             <input type="text" id="phone" name="phone" placeholder="123-123-1234"><br>
