--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -32,7 +32,7 @@
             <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
             <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn |</a>
         </nav>
-        Created by Bronze Mammoth &copy;2022.
+        Created by <a href = "bronzemammoth.co/index.html">Bronze Mammoth</a> &copy;2022.
         <img scr = "images/button_validation_css.png">
         <img scr = "images/button_validation_html5.png">
     </footer>
