--- a/itis3135/bronzemammoth.co/index.html
+++ b/itis3135/bronzemammoth.co/index.html
@@ -11,7 +11,7 @@
         </h1>
     </header>
     <main>
-        <h2>Welcome</h2>
+        <p>Welcome</a>.</p>
     </main>
     <footer>
         Bronze Mammoth &copy;2022.
