--- a/itis3135/bronzemammoth.co/index.html
+++ b/itis3135/bronzemammoth.co/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset = "uft-8">
     <title>Bronze Mammoth</title>
+    <link href = "styles/bronze.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
     <header>
