--- a/itis3135/bronzemammoth.co/index.html
+++ b/itis3135/bronzemammoth.co/index.html
@@ -2,20 +2,19 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Bronze Mammoth</title>
+    <title>Ben Molk | Bronze Mammoth Home</title>
     <link href = "styles/bronze.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
     <header>
-        <h1>
-            Home
-        </h1>
+        <h1>Bronze Mammoth</h1>
     </header>
     <main>
+        <h2> Home</h2>
         <p>Welcome</a>.</p>
     </main>
     <footer>
-        Bronze Mammoth &copy;2022.
+        Bronze Mammoth&copy;2022.
     </footer>
     </body>
 </htlm>
