--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -2,7 +2,7 @@
 <htlm lang = "en-US"> 
 <head>
     <meta charset = "uft-8">
-    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Introduction</title>
+    <title>Ben Molk | ITIS 3135 |  Bronze Mammoth Brand</title>
     <link href = "styles/default.css" type = "text/css" rel = "stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
         <a href = "/">Charlotte Home</a>
     </nav>
     <main>
-        <h2>Ben Molk Introduction</h2>
+        <h2>Bronze Mammoth</h2>
         <img src ="images/me.jpg">
         <ul style = "list-style-type:disc">
         <li><b>Personal Background: </b> Hi my name is Ben Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
