--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -15,7 +15,8 @@
         <a href = "contract.html">Contract |</a>
         <a href = "table.html">Tables |</a>
         <a href = "form.html">Form |</a>
-        <a href = "/">Personal</a>
+        <a href = "brand.html">Brand |</a>
+        <a href = "/">Charlotte Home</a>
     </nav>
     <main>
         <h2>Form</h2>
