--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -20,18 +20,7 @@
     </nav>
     <main>
         <h2>Bronze Mammoth</h2>
-        <img src ="images/me.jpg">
-        <ul style = "list-style-type:disc">
-        <li><b>Personal Background: </b> Hi my name is Ben Molk, but I mostly go by Ben. I was born in Indianapolis, Indiana, and lived there for 11 years before moving to Garner, North Carolina.</li>
-        <li><b>Academic Background: </b> This is my fourth year at Charlotte but only my second year in Computer Science. I started out majoring in Computer Engineering but after 2 years in the major determined that it was not for me. I'm still a little unsure of what my plans are for the rest of my time here but for now, I am content with where I am.</li>
-        <li><b>Background in this Subject: </b> I developed an interest in code while taking a C++ class in my freshman year. When I decided I wanted to change my major, Computer Science seemed like a good option to further explore and learn programming.</li>
-        <li><b>Courses: </b></li>
-            <ul style = "list-style-type:circle">
-            <li><b>ITIS-3135 Web App Design and Development: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            <li><b>ITSC-3155 Software Engineering: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            <li><b>ITSC-3181 Introduction to Computer Architecture: </b>Working towards a degree in Computer Science with a concentration in Software Engineering</li>
-            </ul>
-        </ul> 
+        <p>Bronze Mammoth specializes in webpage design, </p>
     </main>
     <footer>
         <nav>
@@ -45,8 +34,8 @@
             <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn |</a>
         </nav>
         Created by <a href = "bronzemammoth.co/index.html">Bronze Mammoth</a> &copy;2022.
-        <img scr = "images/button_validation_css.png">
-        <img scr = "images/button_validation_html5.png">
+        <img scr = "images/button_validation_css.jpg">
+        <img scr = "images/button_validation_html5.jpg">
     </footer>
     </body>
 </htlm>
