--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -42,8 +42,8 @@
             <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
         </nav>
         Created by <a href = "bronzemammoth.co/index.html">Bronze Mammoth</a> &copy;2022.
-        <img scr = "images/button_validation_css.png">
-        <img scr = "images/button_validation_html5.png">
+        <img scr = "images/button_validation_css.jpg">
+        <img scr = "images/button_validation_html5.jpg">
     </footer>
     </body>
 </htlm>
