--- a/itis3135/form.html
+++ b/itis3135/form.html
@@ -71,7 +71,7 @@
             <a href = "https://www.codecademy.com/profiles/Bmolk">CodeAcademy |</a>
             <a href = "https://www.freecodecamp.org/Bmolk">freeCodeCamp |</a>
             <a href = "https://jsfiddle.net/user/Bmolk/fiddles">JSfiddle |</a>
-            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn |</a>
+            <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
         </nav>
         Created by <a href = "bronzemammoth.co/index.html">Bronze Mammoth</a> &copy;2022.
         <img scr = "images/button_validation_css.jpg">
