--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        <h1>Ben Molk | ITIS 3135 |  Bronze Mammoth</h1>
+        <h1>
+            Ben Molk | ITIS 3135 |  Bronze Mammoth
+            <img src="images/Mammoth.jpg">
+        </h1>
     </header>
     <nav>
         <a href = "./">Home |</a>
@@ -34,8 +37,8 @@
             <a href = "https://www.linkedin.com/in/benjamin-molk-584392207/">LinkedIn</a>
         </nav>
         Created by <a href = "bronzemammoth.co/index.html">Bronze Mammoth</a> &copy;2022.
-        <img scr = "images/button_validation_css.jpg">
-        <img scr = "images/button_validation_html5.jpg">
+        <img src="images/button_validation_css.jpg">
+        <img src="images/button_validation_html5.jpg">
     </footer>
     </body>
 </htlm>
