--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <h2>Bronze Mammoth</h2>
-        <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with garenteed functionality. </p>
+        <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with garenteed functionality! </p>
     </main>
     <footer>
         <nav>
