--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -24,7 +24,7 @@
     <hr>
     <main>
         <h2>Bronze Mammoth</h2>
-        <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with garenteed functionality! </p>
+        <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with guaranteed functionality! </p>
     </main>
     <hr>
     <footer>
