--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -25,12 +25,10 @@
     <main>
         <h2>Bronze Mammoth</h2>
         <p>Bronze Mammoth specializes in webpage design, creating clean webpage interfaces with guaranteed functionality! </p>
-        <p>
-            <b>Contact Information:</b>
-            Email: bronzemammoth@gmail.com
-            Phone: 121-232-3434
-            Address: 9483 Oribos Dr, Charlotte, NC
-        </p>
+        <p><b>Contact Information:</b></p>
+            <p>Email: bronzemammoth@gmail.com</p>
+            <p>Phone: 121-232-3434</p>
+            <p>Address: 9483 Oribos Dr, Charlotte, NC</p>
     </main>
     <hr>
     <footer>
