Added crap page

--- a/itis3135/brand.html
+++ b/itis3135/brand.html
@@ -19,6 +19,7 @@
         <a href = "table.html">Tables |</a>
         <a href = "form.html">Form |</a>
         <a href = "brand.html">Brand |</a>
+        <a href = "CraP.html">Crap |</a>
         <a href = "/">Charlotte Home</a>
     </nav>
     <hr>
