--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,7 +16,7 @@
             <a href = "table.html">Tables |</a>
             <a href = "form.html">Form |</a>
             <a href = "brand.html">Brand |</a>
-            <a href = "CraP.html">Crap |</a>
+            <a href = "stuff/CraP.html">Crap |</a>
             <a href = "/">Charlotte Home</a>
         </nav>
         <hr>
