added crap picture

--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -8,14 +8,11 @@
     <header>
         <h1>Crap</h1>
     </header>
+    <img src="Big Pictures/eat water.jpg">
     <main>
         <h2>crap</h2>
     </main>
     <footer>
-        <p>
-            <img src="images/button_validation_css.jpg">
-            <img src="images/button_validation_html5.jpg">
-        </p>
     </footer>
     </body>
 </htlm>
