Crappy page setup

--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -4,11 +4,11 @@
     <meta charset = "uft-8">
     <title>Crap</title>
 </head>
-<body>
+<body style = "font-family: Papyrus; color: red; background-color: aquamarine; font-size: 48px;">
     <header>
         <h1>Crap</h1>
     </header>
-    <img src="Big Pictures/eat water.jpg">
+    <img src="Big Pictures/Robloxguythat iseatingwater.jpg">
     <main>
         <h2>crap</h2>
     </main>
