--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -4,7 +4,7 @@
     <meta charset = "uft-8">
     <title>Crap</title>
 </head>
-<body style = "font-family: Papyrus; color: red; background-color: aquamarine; font-size: 48px;">
+<body style = "font-family: papyrus; color: red; background-color: aquamarine; font-size: 48px;">
     <header>
         <h1>Crap</h1>
     </header>
