--- a/itis3135/stuff/CraP.html
+++ b/itis3135/stuff/CraP.html
@@ -13,7 +13,7 @@
         <h2>crap</h2>
     </main>
     <footer>
-        <a href = "/">ESCAPE Home</a>
+        <a href = "/">ESCAPE</a>
     </footer>
     </body>
 </htlm>
